fixing overflow on mobile for lists

--- a/css/styles.css
+++ b/css/styles.css
@@ -464,11 +464,11 @@ p{
         transition:all 400ms ease-in-out;
     }
     .lead{
-        margin-bottom:32px;
+        margin-bottom:28px;
     }
     .collection{
         margin:0 0 4px 0;
-        padding:0 0 16px 0;
+        padding:4px 0 16px 0;
         display: flex;
         flex-wrap: nowrap;
         overflow-x: scroll;
